<resources>
    <string name="app_name">ExamApp</string>
    <string name="JSON_student_ID">ID</string>
    <string name="JSON_student_name">Name</string>
    <string name="title_activity_course">CourseActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="university">University</string>
    <string name="examapp">ExamApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="courses_file">CoursesFile</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>

    <string name="student_id">Student ID</string>
    <string name="enter_student_id">Enter student ID</string>
    <string name="verify">Verify</string>
    <string name="student_name">Student Name:</string>
    <string name="app_logo">App Logo</string>
    <string name="verification_image">Verification image</string>
    <string name="back">BACK</string>

</resources>