<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="15dp">


    <TextView
        android:id="@+id/University"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/university"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#020202"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/University"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/examapp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#E65100"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/UserName_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AppName"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="75dp"
        android:text="User Name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#020202"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AppName"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="170dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#020202"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        app:iconTint="#FFFFFF" />
</RelativeLayout>
