<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="edu.coen390.androidapp.View.ManualVerificationActivity">


    <TextView
        android:id="@+id/nameStudentid_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/enter_student_id"
        android:textColor="#020202"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldStudentId"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center_horizontal"
        android:hint="@string/student_id"
        android:textColorHint="#3700B3"
        app:boxStrokeColor="#FF3700B3"
        app:hintTextColor="#FF3700B3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_studentId"
            android:layout_width="362dp"
            android:layout_height="54dp"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/verify"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/studentName_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldStudentId" />

    <LinearLayout
        android:id="@+id/studentName_linearLayout"
        android:layout_width="400dp"
        android:layout_height="58dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/studentID_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyButton">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/student_name"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="305dp" />

        <TextView
            android:id="@+id/studentNameTextView"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/studentID_linearLayout"
        android:layout_width="400dp"
        android:layout_height="58dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/seatNumber_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentName_linearLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="Student ID:"
            tools:layout_editor_absoluteX="-4dp"
            tools:layout_editor_absoluteY="386dp" />

        <TextView
            android:id="@+id/studentIDTextView"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/seatNumber_linearLayout"
        android:layout_width="400dp"
        android:layout_height="58dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/confirmationLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentID_linearLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="Seat Number:"
            tools:layout_editor_absoluteX="-2dp"
            tools:layout_editor_absoluteY="461dp" />

        <TextView
            android:id="@+id/seatNumberTextView"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmationLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seatNumber_linearLayout">

        <ImageView
            android:id="@+id/successMessageImageView"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:id="@+id/cancelSaveLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="@string/back"
                app:backgroundTint="@color/purple_700" />


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>